    is still in effect when a query is the result of
    an attribute-initiated lazyload, as otherwise an
    "N+1" style of collection iteration can become
    needlessly expensive when the same related object
    is encountered repeatedly. There's also an 
    as-yet-not-public generative Query method 
    _with_invoke_all_eagers()
    which selects old/new behavior [ticket:2213]

  - Fixed bug whereby the source clause
    used by query.join() would be inconsistent
    if against a column expression that combined
    multiple entities together.  [ticket:2197]
    Also in 0.6.9

  - Fixed bug whereby if a mapped class
    redefined __hash__() or __eq__() to something
    non-standard, which is a supported use case
    as SQLA should never consult these,
    the methods would be consulted if the class
    was part of a "composite" (i.e. non-single-entity)
    result set.  [ticket:2215]
    Also in 0.6.9.

  - Fixed subtle bug that caused SQL to blow
    up if: column_property() against subquery +
    joinedload + LIMIT + order by the column
    property() occurred.  [ticket:2188].
    Also in 0.6.9

  - The join condition produced by with_parent
    as well as when using a "dynamic" relationship
    against a parent will generate unique
    bindparams, rather than incorrectly repeating 
    the same bindparam.  [ticket:2207].
    Also in 0.6.9.

  - Added the same "columns-only" check to 
    mapper.polymorphic_on as used when
    receiving user arguments to  
    relationship.order_by, foreign_keys,
    remote_side, etc.

  - Fixed bug whereby comparison of column
    expression to a Query() would not call
    as_scalar() on the underlying SELECT 
    statement to produce a scalar subquery,
    in the way that occurs if you called
    it on Query().subquery(). [ticket:2190]

  - Fixed declarative bug where a class inheriting
    from a superclass of the same name would fail
    due to an unnecessary lookup of the name